@@ -1028,3 +1028,5 @@ s/db5_enc_len[(.*)]/DB5_ENC_LEN(\1)/g
 	replaced db5_enc_len[] global array with DB5_ENC_LEN() macro [7.25]
 s/db_normalize/bu_normalize/g
 	move the path normalization routine to libbu [7.25]
+s/(#[[:space:]]*include[[:space:]]+["<])bot\.h/\1rt\/primitives\/bot.h/g
+	consolidate bot header contents [7.25]
